<resources>
    <string name="app_name">StockHawk</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_splash">StockHawk</string>
    <string name="network_toast">Please check the network connection</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="symbol_message">Search for a stock Symbol</string>
    <string name="hint">FB</string>
    <string name="ok">OK</string>
    <string name="action_change_units">Change Units</string>
    <string name="chart_desc">Line charting of stock details</string>
    <string name="add_stock">Add Stock</string>
    <string name="enter_stock_code">Enter the stock code to serach</string>
    <string name="no_stock_details_found">no stock details found</string>
    <string name="stock_is_already_saved">This stock is already saved!</string>
    <string name="periodic">periodic</string>
    <string name="no_data_avaliable">No data available</string>
    <string name="setBackgroundResource">setBackgroundResource</string>
</resources>